--- a/templates/toc.phtml
+++ b/templates/toc.phtml
@@ -1,15 +1,37 @@
-<div class="wrap">
+<?php
+
+/*
+ * To change this license header, choose License Headers in Project Properties.
+ * To change this template file, choose Tools | Templates
+ * and open the template in the editor.
+ */
+
+/**
+ * @todo Add link to <a href="https://github.com">GitHub</a> (and directly to issues).
+ * @todo Add link to <a href="https://paypal.me/ondrejd">PayPal.me</a>.
+ */
+
+/**
+ * @global \com\ondrejd\adminpatterns\Plugin $odwpap_plugin
+ */
+global $odwpap_plugin;
+
+$screens = $odwpap_plugin->get_screens();
+
+?><div class="wrap">
 
 	<?php screen_icon(); ?>
 
 	<h2>WordPress Administration Design Patterns Library</h2>
 
-    <p>...</p>
+    <p>This plugin that contains design pattern library to help with developing plugins that perfectly fit into <a href="https://wordpress.org/" target="blank">WordPress</a> administration.</p>
 
 	<h3>Table of Contents</h3>
 
 	<ul class="ul-disc">
-	<!-- XXX List all screen ... -->
+        <?php foreach( $screens as $scr ) : ?>
+        <li><a href="<?php echo admin_url( '?page=' . $scr->get_slug() ); ?>" title="<?php echo $scr->get_page_title(); ?>"><?php echo $scr->get_menu_title(); ?></a></li>
+        <?php endforeach; ?>
 	</ul>
 
 	<h3>Usefull links</h3>
