--- a/templates/jqueryui.phtml
+++ b/templates/jqueryui.phtml
@@ -1,7 +1,17 @@
 <?php
-/**
- * @todo Add source code examples!
+
+/*
+ * To change this license header, choose License Headers in Project Properties.
+ * To change this template file, choose Tools | Templates
+ * and open the template in the editor.
  */
+
+/**
+ * @todo Add code example (this page, how jQuery is registered etc.)!
+ * @todo Get plugin's option `display_detail_description`!
+ */
+$display_description = true;
+
 ?><div class="wrap">
 
 	<?php screen_icon(); ?>
