--- a/templates/otherwidgets.phtml
+++ b/templates/otherwidgets.phtml
@@ -1,4 +1,17 @@
-<div class="wrap">
+<?php
+
+/*
+ * To change this license header, choose License Headers in Project Properties.
+ * To change this template file, choose Tools | Templates
+ * and open the template in the editor.
+ */
+
+/**
+ * @todo Get plugin's option `display_detail_description`!
+ */
+$display_description = true;
+
+?><div class="wrap">
 
 	<?php screen_icon(); ?>
 
@@ -28,7 +41,7 @@
 
 		<img src="<?php echo plugins_url( '../images/admin_notices.png', __FILE__ ); ?>" alt="Example notices"/>
 
-		<p><?php printf( __( 'As you can see the last notice is also dismissible - this is because of using class <code>.is-dismissible</code>. If you want to store state of dismissible notice you can use small library <a href="">CalderaWP/dismissible_notice</a>.', WP_Style_Guide::PLUGIN_SLUG ), 'https://github.com/CalderaWP/dismissible_notice/tree/master/src' ); ?></p>
+		<p><?php printf( 'As you can see the last notice is also dismissible - this is because of using class <code>.is-dismissible</code>. If you want to store state of dismissible notice you can use small library <a href="">CalderaWP/dismissible_notice</a>.', 'https://github.com/CalderaWP/dismissible_notice/tree/master/src' ); ?></p>
 	</div>
 	<p class="description"><a href="#wpbody" class="alignright">Back to top</a></p>
 
@@ -36,7 +49,7 @@
 	<br id="br-bubble_icon" class="clear" />
 	<h2>Bubble Icon</h2>
 	<div class="wp-pattern-example">
-		<p><?php printf( __( 'Sometimes you want to show count of items for an admin menu item (doesn\'t matter if it is your menuitem or <i>WP</i> original). It\'s pretty simple you just need to add hook for action <code><a href="%s" target="blank">admin_menu</a></code> and update any menu item you want: ', WP_Style_Guide::PLUGIN_SLUG ), 'https://codex.wordpress.org/Plugin_API/Action_Reference/admin_menu' ); ?></p>
+		<p><?php printf( 'Sometimes you want to show count of items for an admin menu item (doesn\'t matter if it is your menuitem or <i>WP</i> original). It\'s pretty simple you just need to add hook for action <code><a href="%s" target="blank">admin_menu</a></code> and update any menu item you want: ', 'https://codex.wordpress.org/Plugin_API/Action_Reference/admin_menu' ); ?></p>
 		<pre><code class="language-php">/**
 &nbsp; * @global array $menu
 &nbsp; * @return void;
@@ -109,7 +122,7 @@ add_action( 'admin_menu', 'add_user_menu_bubble' );
 	<br id="br-spinner" />
 	<h2>Spinner</h2>
 	<div class="wp-pattern-example">
-		<p><?php printf( __( 'This element is new since <b>WordPress</b> version <b>4.2</b> (<a href="%s" target="blank">more details</a>). Is oftenly used in inline forms while AJAX submitting is performed. See example below:', WP_Style_Guide::PLUGIN_SLUG ), 'https://make.wordpress.org/core/2015/04/23/spinners-and-dismissible-admin-notices-in-4-2/' ); ?></p>
+		<p><?php printf( 'This element is new since <b>WordPress</b> version <b>4.2</b> (<a href="%s" target="blank">more details</a>). Is oftenly used in inline forms while AJAX submitting is performed. See example below:', 'https://make.wordpress.org/core/2015/04/23/spinners-and-dismissible-admin-notices-in-4-2/' ); ?></p>
 		<p>Here is an excerpt from required HTML code:</p>
 		<pre><code class="language-markup">&lt;p class="submit submit-example"&gt;
 	&lt;button class="button-primary save alignright" type="button"&gt;Click me!&lt;/button&gt;
